--- a/formulaires/configurer_urls.html
+++ b/formulaires/configurer_urls.html
@@ -1,7 +1,7 @@
 <div class="formulaire_spip formulaire_configurer formulaire_#FORM formulaire_#FORM-#ENV{id,nouveau}">
 <h3 class='titrem'>[(#CHEMIN_IMAGE{url-24.png}|balise_img{'','cadre-icone'})]<:urls:titre_type_urls:></h3>
-	[<p class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</p>]
-	[<p class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</p>]
+	[<p class="reponse_formulaire reponse_formulaire_ok" role="status">(#ENV*{message_ok})</p>]
+	[<p class="reponse_formulaire reponse_formulaire_erreur" role="alert">(#ENV*{message_erreur})</p>]
 	[(#ENV{editable})
 	#SET{fl,urls}
 	<form method='post' action='#ENV{action}'><div>
