Comme pour le public, changer le balisage du conteneur de pagination en choisissant ici un <nav> au lieu d'un <p>, plus robuste et plus signifiant (Prepare https://core.spip.net/issues/2822)

--- a/prive/objets/liste/urls.html
+++ b/prive/objets/liste/urls.html
@@ -41,7 +41,7 @@
 	</BOUCLE_liste_urls>
 	</tbody>
 </table>
-[<p class='pagination'>(#PAGINATION{prive})</p>]
+[<nav class='pagination'>(#PAGINATION{prive})</nav>]
 </div>
 </B_liste_urls>[
 <div class="liste-objets urls caption-wrap"><strong class="caption">(#ENV*{sinon,''})</strong></div>
