--- a/prive/squelettes/navigation/controler_urls.html
+++ b/prive/squelettes/navigation/controler_urls.html
@@ -4,6 +4,6 @@
 
 <p><:urls:actualiser_toutes_explication:></p>
 
-[(#BOUTON_ACTION{<:urls:actualiser_toutes:>,#URL_ACTION_AUTEUR{urls_actualiser,'',#SELF},actualiser})]
+[(#BOUTON_ACTION{[(#CHEMIN_IMAGE{url-24.svg}|balise_img)&nbsp;]<:urls:actualiser_toutes:>,#URL_ACTION_AUTEUR{urls_actualiser,'',#SELF}})]
 ]
 #BOITE_FERMER
