En attendant mieux, on améliore l'affichage du changement d'URL suite à la nouvelle décoration des boutons...

--- a/prive/objets/editer/url.html
+++ b/prive/objets/editer/url.html
@@ -3,11 +3,11 @@
 	[
 		#SET{auth,#AUTORISER{modifierurl,#OBJET,#ID_OBJET}}
 		[(#GET{auth}|oui)
-		<button class="link"
+		<button class="btn btn_link"
 		title="Modifier l'URL"
 		onclick="jQuery(this).closest('.editer_urls').find('.edition').toggle('fast').closest('.editer_urls').delay(300).toggleClass('open');return false;"
-						><span class="bouton edit"><:bouton_modifier:></span>]
-		[(#GET{auth}|non)<span class='link'>]
+						><span class="btn edit"><:bouton_modifier:></span>]
+		[(#GET{auth}|non)<span class='btn btn_link'>]
 			<span class="url" id="url-#OBJET-#ID_OBJET">(#ID_OBJET|generer_url_entite{#OBJET,'','',#EVAL{true}}|url_absolue)</span>[(#GET{auth}|?{</button>,</span>})]]
 	[(#AUTORISER{modifier,#OBJET,#ID_OBJET})
 	<div class="edition">
