petits oublis de renommage

--- a/prive/style_prive_plugin_urls.html
+++ b/prive/style_prive_plugin_urls.html
@@ -26,10 +26,10 @@
 
 .fiche_objet .editer_urls .edition {display:none;}
 .fiche_objet .editer_urls.open .edition {display:block;}
-.fiche_objet .editer_urls .link:hover,
-.fiche_objet .editer_urls.open .link {color: inherit;}
-.fiche_objet .editer_urls .link:hover .edit,
-.fiche_objet .editer_urls.open .link .edit {visibility: visible;}
+.fiche_objet .editer_urls .btn_link:hover,
+.fiche_objet .editer_urls.open .btn_link {color: inherit;}
+.fiche_objet .editer_urls .btn_link:hover .edit,
+.fiche_objet .editer_urls.open .btn_link .edit {visibility: visible;}
 .fiche_objet .editer_urls .liste-objets .objet {display: none;}
 .fiche_objet .editer_urls .liste-objets {margin-bottom: 0; overflow:auto; width:100%; }
 .fiche_objet .editer_urls .formulaire_spip {margin-top:0;border:0;border-top: 1px solid #EEE;}
