--- a/prive/objets/liste/urls.html
+++ b/prive/objets/liste/urls.html
@@ -36,7 +36,7 @@
 			<td class='parent'>[(#ID_PARENT|?{#ID_PARENT})]</td>
 			<td class='langue secondaire'>#LANGUE</td>
 			<td class='date secondaire'>[(#DATE|affdate_jourcourt)]</td>
-			<td class='action'>[(#AUTORISER{modifierurl,#TYPE,#ID_OBJET})[(#BOUTON_ACTION{[(#CHEMIN_IMAGE{supprimer-12.png}|balise_img{<:urls:bouton_supprimer_url:>})],[(#URL_ACTION_AUTEUR{supprimer_url,[(#ID_PARENT)-#URL],#SELF})],ajax})]]</td>
+			<td class='action'>[(#AUTORISER{modifierurl,#TYPE,#ID_OBJET})[(#BOUTON_ACTION{[(#CHEMIN_IMAGE{supprimer-16.png}|balise_img{<:urls:bouton_supprimer_url:>})],[(#URL_ACTION_AUTEUR{supprimer_url,[(#ID_PARENT)-#URL],#SELF})],ajax btn btn_danger})]]</td>
 		</tr>
 	</BOUCLE_liste_urls>
 	</tbody>
