Ameliorer la modification des urls propres et notamment le fait qu'il etait impossible de supprimer l'url propre d'un objet a la poubelle : - si l'objet est publie ou propose, on peut modifier son/ses urls, et si on supprime toutes les urls il s'en regenere une a jour et le formulaire est toujours dispo - si l'objet n'est pas publie (prepa, poubelle...) alors il ne faut pas generer une url du fait de l'affichage du formulaire d'edition : on ne l'affiche pas   - sauf si il y a deja des urls propres, alors il faut y acceder et permettre de les modifier   - mais quand on supprime la derniere, il faut alors que le formulaire disparaisse sans regenerer une nouvelle URL

--- a/prive/objets/editer/url.html
+++ b/prive/objets/editer/url.html
@@ -1,4 +1,4 @@
-[(#INFO_STATUT{#OBJET,#ID_OBJET}|!={prepa}|oui)
+[(#OBJET|urls_is_url_editable{#ID_OBJET}|oui)
 <div class="editer_urls">
 	[
 		#SET{auth,#AUTORISER{modifierurl,#OBJET,#ID_OBJET}}
