Ticket #4812 Éviter une erreur fatale lors de la suppression d’une URL depuis la page de contrôle
Le squelettes liste/urls ne cherge pas à appeler `urls_is_url_editable()` sans objet.
D’autre part dans `urls_is_url_editable()` on fait un retour précoce si l’appel était erroné (sans objet)
On en profite pour typer un peu la fonction.

--- a/prive/objets/liste/urls.html
+++ b/prive/objets/liste/urls.html
@@ -5,7 +5,8 @@
 	type,1
 }})
 ]
-[(#VAL{_AJAX}|defined|et{#CONST{_AJAX}})
+
+[(#CONST{_AJAX}|et{#TYPE}|et{#ID_OBJET})
 <script type="text/javascript">if (window.jQuery) jQuery(function(){
 [(#TYPE|urls_is_url_editable{#ID_OBJET}|oui)
 	jQuery('#url-#TYPE-#ID_OBJET').html('[(#ID_OBJET|generer_objet_url{#TYPE,'','',#EVAL{true}}|url_absolue|texte_script)]');
